--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #315c5c;
+  background-color: #67a5a5;
   background-size: cover;
   background-position: center;
 }
